; ModuleID = '/home/carl/AnghaBench/curl/docs/examples/extr_progressfunc.c_older_progress.c'
source_filename = "/home/carl/AnghaBench/curl/docs/examples/extr_progressfunc.c_older_progress.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, double, double, double, double)* @older_progress to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @older_progress(i8* %0, double %1, double %2, double %3, double %4) #0 {
  %6 = alloca i8*, align 8
  %7 = alloca double, align 8
  %8 = alloca double, align 8
  %9 = alloca double, align 8
  %10 = alloca double, align 8
  store i8* %0, i8** %6, align 8
  store double %1, double* %7, align 8
  store double %2, double* %8, align 8
  store double %3, double* %9, align 8
  store double %4, double* %10, align 8
  %11 = load i8*, i8** %6, align 8
  %12 = load double, double* %7, align 8
  %13 = fptosi double %12 to i32
  %14 = load double, double* %8, align 8
  %15 = fptosi double %14 to i32
  %16 = load double, double* %9, align 8
  %17 = fptosi double %16 to i32
  %18 = load double, double* %10, align 8
  %19 = fptosi double %18 to i32
  %20 = call i32 @xferinfo(i8* %11, i32 %13, i32 %15, i32 %17, i32 %19)
  ret i32 %20
}

declare dso_local i32 @xferinfo(i8*, i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
